# NMR-program

./: .gitignore  Cargo.toml  GEMINI.md  README.md
.github/workflows/: build.yml
nmr-spectra-converter/: Cargo.toml  README.md
nmr-spectra-converter/crates/bruk2pipe/: Cargo.toml
nmr-spectra-converter/crates/bruk2pipe/src/: convert.rs  dmx.rs  lib.rs  ser2fid.rs
nmr-spectra-converter/crates/delta2pipe/: Cargo.toml
nmr-spectra-converter/crates/delta2pipe/src/: convert.rs  header.rs  lib.rs  submatrix.rs
nmr-spectra-converter/crates/nmrpipe-core/: Cargo.toml
nmr-spectra-converter/crates/nmrpipe-core/src/: enums.rs  fdata.rs  lib.rs  params.rs
nmr-spectra-converter/crates/nmrpipe-io/: Cargo.toml
nmr-spectra-converter/crates/nmrpipe-io/src/: byteswap.rs  dfcorrect.rs  lib.rs  reader.rs  writer.rs
nmr-spectra-converter/test_output/: compare.py
src/: app.rs  main.rs
src/data/: bruker.rs  jcamp.rs  jdf.rs  mod.rs  native_converter.rs  nmrpipe_format.rs  spectrum.rs
src/gui/: contour_view.rs  conversion_dialog.rs  export_dialog.rs  export_tab.rs  mod.rs  phase_dialog.rs  pipeline_panel.rs  spectrum_view.rs  theme.rs  toolbar.rs
src/log/: mod.rs  reproducibility.rs
src/pipeline/: command.rs  conversion.rs  mod.rs  processing.rs
