[package]
name = "nmr_gui"
version = "0.1.0"
edition = "2021"
description = "NMR Spectral Processing GUI with NMRPipe backend"

[dependencies]
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
egui_plot = "0.31"
egui_extras = { version = "0.31", features = ["image"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rfd = "0.15"
byteorder = "1"
num-complex = "0.4"
rustfft = "6"
image = "0.25"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
